api-reference/rest-apis/v2/comments-feature/comment-annotations/update-comment-annotations.mdx
---
title: "Update Comment Annotations"
description: "Update V2 comment annotations via REST: patch status, priority, assignee, context, or suggestion payload by annotation, location, or user ID."
api: "POST https://api.velt.dev/v2/commentannotations/update"
---

Use this API to update comment annotations in a document within an organization.
Additional filters can be applied using location IDs, annotation IDs, or user IDs.

# Endpoint

`POST https://api.velt.dev/v2/commentannotations/update`

# Headers

<ParamField header="x-velt-api-key" type="string" required>
  Your API key.
</ParamField>

<ParamField header="x-velt-auth-token" type="string" required>
  Your [Auth Token](/security/auth-tokens).
</ParamField>

# Body

#### Params

<ParamField body="data" type="object" required>
  <Expandable title="properties">
    <ParamField body="organizationId" type="string" required>
      Organization ID
    </ParamField>

    <ParamField body="documentId" type="string" required>
      Document ID
    </ParamField>

    <ParamField body="locationIds" type="string[]">
      Array of Location IDs
    </ParamField>

    <ParamField body="userIds" type="string[]">
      Array of User IDs. These are the users who created the comment annotation.
    </ParamField>

    <ParamField body="annotationIds" type="string[]">
      Array of Annotation IDs
    </ParamField>

    <ParamField body="updatedData" type="object[]">
      <Expandable title="properties">
        <ParamField body="location" type="object">
          <Expandable title="properties">
            <ParamField body="id" type="string" required>
              Location ID
            </ParamField>

            <ParamField body="locationName" type="string">
              Location Name
            </ParamField>      
          </Expandable>
        </ParamField>

        <ParamField body="targetElement" type="object">
          Target Element
          <Expandable title="properties">
            <ParamField body="elementId" type="string">
              Element DOM Id
            </ParamField>

            <ParamField body="targetText" type="string">
              Target Text. Provide this if you want to add comment annotation on the provided text content.
            </ParamField>

            <ParamField body="occurrence" type="number">
              Occurrence. Provide this if you want to add comment annotation on a text content.
            </ParamField>

            <ParamField body="selectAllContent" type="boolean">
              Select All Content. Provide this if you want to select and add comment annotation on the entire text content of the target elementId.
            </ParamField>      
          </Expandable>
        </ParamField>
        
        <ParamField body="from" type="User">
          User object from whom the Comment Annotation is added
        </ParamField>

        <ParamField body="status" type="Status">
          Status
          <Expandable title="properties">
            <ParamField body="id" type="string" required> 
              Status ID
            </ParamField>

            <ParamField body="name" type="string" required> 
              Status Name
            </ParamField>
            
            <ParamField body="type" type="string" required> 
              Type. Must be one of: `default`, `ongoing`, or `terminal`.
            </ParamField>

            <ParamField body="color" type="string">
              Text and comment pin color
            </ParamField>
            
            <ParamField body="lightColor" type="string">
              Background color on the status indicator
            </ParamField>

            <ParamField body="svg" type="string">
              Raw SVG of the icon.
            </ParamField>

            <ParamField body="iconUrl" type="string">
              Icon URL.
            </ParamField>
          </Expandable>
        </ParamField>

        <ParamField body="statusUpdatedByUserId" type="string | null">
          User ID of whoever made this status change.

          Pass `null` to clear it. Omit the field to leave the stored value unchanged.
        </ParamField>

        <ParamField body="resolvedByUserId" type="string | null">
          User ID of whoever resolved the comment annotation. This is what `resolvedBy`
          filtering on [Get Comment Annotations](/api-reference/rest-apis/v2/comments-feature/comment-annotations/get-comment-annotations-v2) matches against.

          Pass `null` to clear it. Omit the field to leave the stored value unchanged.

          <Note>
            Setting a `status` whose `type` is **not** `terminal` clears this field and
            `resolvedByUser` automatically, even if you pass a value here. A comment annotation
            that is no longer resolved cannot keep a resolver. `statusUpdatedByUserId` is not
            cleared, so you still have a record of who reopened it.
          </Note>
        </ParamField>

        <ParamField body="assignedTo" type="User">
          User object to whom the comment is assigned
        </ParamField>

        <ParamField body="context" type="object">
          Custom key/value metadata object
        </ParamField>

        <ParamField body="priority" type="object">
          Priority
          <Expandable title="properties">
              <ParamField body="id" type="string" required>
                Priority ID
              </ParamField>

              <ParamField body="name" type="string" required>
                Priority Name
              </ParamField>

              <ParamField body="color" type="string">
                Priority Color
              </ParamField>

              <ParamField body="lightColor" type="string">
                Priority Light Color
              </ParamField>
            </Expandable>
        </ParamField>

        <ParamField body="suggestion" type="object">
          Proposed-change payload for `type: "suggestion"` annotations. Any fields you send replace the persisted `suggestion` object. Include the existing fields when you only want to change one value (for example, `status`); otherwise omitted fields are cleared.

          The schema is open: additional custom fields are stored as-is. Unlike create, `status` is honored here and can be set to `pending`, `accepted`, or `rejected`.
          <Expandable title="properties">
            <ParamField body="status" type="string">
              Suggestion lifecycle status. One of: `pending`, `accepted`, or `rejected`.
            </ParamField>
            <ParamField body="targetId" type="string">
              Stable ID of the thing being changed.
            </ParamField>
            <ParamField body="targetType" type="string">
              Kind of target the suggestion applies to.
            </ParamField>
            <ParamField body="oldValue" type="any">
              The value at the time the suggestion was created.
            </ParamField>
            <ParamField body="newValue" type="any">
              The proposed new value.
            </ParamField>
            <ParamField body="summary" type="string | null">
              Optional human-readable summary of the change.
            </ParamField>
            <ParamField body="driftDetected" type="boolean">
              Set to `true` when the live target value differs from `oldValue`.
            </ParamField>
          </Expandable>
        </ParamField>

        <ParamField body="actions" type="CommentAction[]">
          Per-row default action chips, inherited by every comment on the annotation that doesn't set its own `comment.actions`. Replaces the stored array outright; it is not deep-merged. Capped at 20 entries. See [CommentAction](/api-reference/sdk/models/data-models#commentaction) for the full shape.
        </ParamField>
      </Expandable>
    </ParamField>

    <ParamField body="updateUsers" type="object[]">
      <Expandable title="properties">
        <ParamField body="oldUser" type="User" required>
          <Expandable title="properties">
            <ParamField body="userId" type="string" required>
              Old user's ID
            </ParamField>
            <ParamField body="name" type="string">
              Old user's name
            </ParamField>
            <ParamField body="email" type="string">
              Old user's email
            </ParamField>
          </Expandable>
        </ParamField>

        <ParamField body="newUser" type="User" required>
          <Expandable title="properties">
            <ParamField body="userId" type="string" required>
              New user's ID
            </ParamField>
            <ParamField body="name" type="string">
              New user's name
            </ParamField>
            <ParamField body="email" type="string">
              New user's email
            </ParamField>
          </Expandable>
        </ParamField>
      </Expandable>
    </ParamField>

  </Expandable>
</ParamField>

## **Example Requests**

#### 1. Update all comment annotations by organizationId and documentId

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentId": "yourDocumentId",
    "annotationIds": [
      "yourAnnotationId1",
      "yourAnnotationId2"
    ],
    "updatedData" : {
      "status": {
        "id": "inprogress",
        "name": "In Progress",
        "type": "ongoing"
      }
    }
  }
}
```

#### 2. Update comment annotations by organizationId, documentId and locationIds

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentId": "yourDocumentId",
    "locationIds": [
      "locationx"
    ],
    "annotationIds": [
      "yourAnnotationId1",
      "yourAnnotationId2"
    ],
    "updatedData" : {
      "status": {
        "id": "inprogress",
        "name": "In Progress",
        "type": "ongoing"
      }
    }
  }
}
```

#### 3. Update annotations by organizationId, documentId, locationIds and userIds

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentId": "yourDocumentId",
    "locationIds": [
      "locationx"
    ],
    "userIds": [
      "yourUserId"
    ],
    "annotationIds": [
      "yourAnnotationId1",
      "yourAnnotationId2"
    ],
    "updatedData" : {
      "status": {
        "id": "inprogress",
        "name": "In Progress",
        "type": "ongoing"
      }
    }
  }
}
```

#### 4. Update comment annotations by organizationId, documentId and userIds

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentId": "yourDocumentId",
    "userIds": [
      "yourUserId"
    ],
    "annotationIds": [
      "yourAnnotationId1",
      "yourAnnotationId2"
    ],
    "updatedData" : {
      "status": {
        "id": "inprogress",
        "name": "In Progress",
        "type": "ongoing"
      }
    }
  }
}
```

#### 5. Update comment annotations by organizationId, documentId and annotationIds

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentId": "yourDocumentId",
    "annotationIds": [
      "yourAnnotationId1",
      "yourAnnotationId2"
    ],
    "updatedData" : {
      "status": {
        "id": "inprogress",
        "name": "In Progress",
        "type": "ongoing"
      }
    }
  }
}
```

#### 6. Update comment annotations by organizationId, documentId, locationIds and annotationIds

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentId": "yourDocumentId",
    "locationIds": [
      "locationx"
    ],
    "annotationIds": [
      "yourAnnotationId1",
      "yourAnnotationId2"
    ],
    "updatedData" : {
      "status": {
        "id": "inprogress",
        "name": "In Progress",
        "type": "ongoing"
      }
    }
  }
}
```

#### 7. Update Users in existing comment annotations

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentId": "yourDocumentId",
    "annotationIds": [
      "yourAnnotationId1",
      "yourAnnotationId2"
    ],
    "updateUsers" : [
      {
        "oldUser": {
          "userId": "oldUserId",
        },
        "newUser": {
          "userId": "newUserId",
          "name": "newUserName",
          "email": "newUserEmail"
        }
      }
    ]
  }
}
```

#### 8. Update comment annotations with access context

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentId": "yourDocumentId",
    "annotationIds": [
      "yourAnnotationId1"
    ],
    "updatedData": {
      "context": {
        "access": {
          "entityId": "numberOfAccounts",
          "dashboardId": "salesDashboard"
        }
      }
    }
  }
}
```

#### 9. Resolve a comment annotation and record who resolved it

Recording the resolver is what makes the annotation match a `resolvedBy` filter later.

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentId": "yourDocumentId",
    "annotationIds": [
      "yourAnnotationId1"
    ],
    "updatedData": {
      "status": {
        "id": "RESOLVED",
        "name": "Resolved",
        "type": "terminal"
      },
      "resolvedByUserId": "yourUserId",
      "statusUpdatedByUserId": "yourUserId"
    }
  }
}
```

#### 10. Reopen a comment annotation

Moving to a non-`terminal` status clears `resolvedByUserId` and `resolvedByUser` for you, so
there is no need to null them yourself. Send `statusUpdatedByUserId` to record who reopened it.

```JSON
{
  "data": {
    "organizationId": "yourOrganizationId",
    "documentId": "yourDocumentId",
    "annotationIds": [
      "yourAnnotationId1"
    ],
    "updatedData": {
      "status": {
        "id": "OPEN",
        "name": "Open",
        "type": "default"
      },
      "statusUpdatedByUserId": "yourUserId"
    }
  }
}
```

# Response

#### Success Response

```JSON
{
    "result": {
        "status": "success",
        "message": "Annotations updated successfully.",
        "data": {
            "yourAnnotationId1": {
                "success": true,
                "id": "yourAnnotationId1",
                "message": "Annotations updated successfully"
            }
        }
    }
}
```

#### Failure Response
```JSON
{
  "error": {
    "message": "ERROR_MESSAGE",
    "status": "INVALID_ARGUMENT"
  }
}
```

<ResponseExample>
```js
{
    "result": {
        "status": "success",
        "message": "Annotations updated successfully.",
        "data": {
            "yourAnnotationId1": {
                "success": true,
                "id": "yourAnnotationId1",
                "message": "Annotations updated successfully"
            }
        }
    }
}
```
</ResponseExample>